design logo contact

--- a/style.css
+++ b/style.css
@@ -2,6 +2,41 @@
   padding-top: 6rem;
   background-color: #80adf5;
 }
+
 #projects {
   background-color: #80adf5;
+}
+
+#wa{
+  color: white;
+  background-color: #25D366;
+  border-radius: 20px 20px 20px 20px;
+  padding: 0px 10px 5px 10px ;
+}
+
+#fb{
+   color: white;
+  background-color: #4267B2;
+  border-radius: 20px 20px 20px 20px;
+  padding: 0px 10px 5px 10px ;
+}
+
+#in{
+   color:#2867B2;
+  background-color: white;
+
+  padding: 0px 10px 5px 10px ;
+}
+
+.text-LinkedIn{
+  color: #2867B2;
+}
+#twitt{
+  color: #1DA1F2;
+  background-color: white;
+  padding: 0px 10px 5px 10px ;
+}
+.text-twitt{
+  color: #2867B2;
+  background-color: white;
 }
