--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Times New Roman", Times, serif;
+  font-size: 20px;
 }
 /* navbar */
 
@@ -25,14 +26,14 @@ body {
   color: white;
   background-color: #25d366;
   border-radius: 20px 20px 20px 20px;
-  padding: 2px 10px 5px 10px;
+  padding: 5px 10px 5px 10px;
 }
 
 #fb {
   color: white;
   background-color: #4267b2;
   border-radius: 20px 20px 20px 20px;
-  padding: 2px 10px 5px 10px;
+  padding: 5px 10px 5px 10px;
 }
 
 #in {
