--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ body {
   padding-left: 2rem;
   display: flex;
 }
+
 #sosmed :hover {
   transform: translateY(8px);
+  transition: transform 0.3s ease-out;
 }
